--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.QuickbitesAdminpanel"
         tools:targetApi="31">
         <activity
-            android:name=".allitemactivity"
+            android:name=".Allitemactivity"
             android:exported="false" />
         <activity
-            android:name=".additem"
+            android:name=".Additem"
             android:exported="false" />
         <activity
             android:name=".AdminPage"
