--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:theme="@style/Theme.QuickbitesAdminpanel"
         tools:targetApi="31">
         <activity
-            android:name=".Allitemactivity"
+            android:name=".AddItemActivity"
             android:exported="false" />
         <activity
-            android:name=".Additem"
+            android:name=".AllItemActy"
             android:exported="false" />
         <activity
             android:name=".AdminPage"
-            android:exported="false" />
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".Login_Page"
             android:exported="false" />
@@ -29,13 +35,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
